--- a/templates/question.html
+++ b/templates/question.html
@@ -19,8 +19,8 @@
     <!--link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"-->
 	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-	<script src="{% static 'main.js' %}" type"text/javascript"></script>
-	<script src="{% static 'simple-expand.js' %}"></script>  
+	<script src="{% static 'core/js/main.js' %}" type"text/javascript"></script>
+	<script src="{% static 'core/js/simple-expand.js' %}"></script>
 	<script type="text/javascript">
 	    $(function () {
 	        $('.expander').simpleexpand();
@@ -142,4 +142,4 @@ debug message: {{ debug }}
 
 {% endblock %}
 
-<script src="{% static 'main.js' %}" type"text/javascript"></script>
+<script src="{% static 'core/js/main.js' %}" type"text/javascript"></script>
