--- a/templates/homework.html
+++ b/templates/homework.html
@@ -9,8 +9,8 @@
 	{{ block.super }} 
 	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-	<script src="{% static 'main.js' %}" type"text/javascript"></script>
-	<script src="{% static 'simple-expand.js' %}"></script>  
+	<script src="{% static 'core/js/main.js' %}" type"text/javascript"></script>
+	<script src="{% static 'core/js/simple-expand.js' %}"></script>
 	<script type="text/javascript">
 	    $(function () {
 	        $('.youranswer').show();
