fixed get_book() in models.py

--- a/review/templates/review/book_index.html
+++ b/review/templates/review/book_index.html
@@ -9,8 +9,14 @@
 
 {% block content-main %}
 
+<div class="macros">
+    {% autoescape off %}
+		\( {{ book.new_commands | safe }} \)
+	{% endautoescape %}
+</div>
 
-<h1>Book {{ book.number }}. {{ book.title }} Questions</h1>
+<h1>Book {{ book.number }}. {{ book.title }}</h1>
+<h2>Questions</h2>
 
 {% for question in questions %}
   {% include 'review/question_block.html' %}
