--- a/review/templates/review/index.html
+++ b/review/templates/review/index.html
@@ -13,7 +13,7 @@
 
 {% for module in modules %}
   <h2><u>{{ module.long_name }}</u></h2>
-  {% for book in module.book_module.all %}
+  {% for book in module.book_set.all %}
     <a href="/review/book/{{ book.id }}">{{ book.number }}. {{ book.title }}</a>
   {% endfor %}
 {% endfor %}
